--- a/m2_sol.html
+++ b/m2_sol.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link href="F:\other\all Html\style4.css" type="text/css" rel="stylesheet" />
+    <link href="m2_sol\style4.css" type="text/css" rel="stylesheet" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1"> 
     <title>
