--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link href="https://Advait-1999.github.io/m2_sol/blob/master/docs/css/style4.css" type="text/css" rel="stylesheet" />
+    <link   rel="stylesheet" type="text/css" href="style.css"/>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1"> 
     <title>
